🔨 fix scrollbar appearance on popup open

--- a/popup.css
+++ b/popup.css
@@ -8,6 +8,7 @@ html, body {
 	font-weight: 300;
 	font-size: 16px;
 	min-width: 300px;
+	overflow: hidden;
 }
 
 #app {
